0029000: Update documentation of Boolean operations according to the new Error/Warning reporting system

The documentation of Boolean Component has been updated - calls to ErrorStatus() method have been replaced with calls to HasErrors() method.